--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,10 +3,25 @@
 {% load static%}
 {% block content %}
   <h1>Лента записей</h1>                        
-  {% for post in posts reversed %}     
-    {{ post.id }}
-    {{ post.text|truncatewords:10 }}
-    <hr>
+  {% for post in posts reversed %}
+  <hr>
+    <article>
+      <ul>     
+        <li>
+          Место: {{ post.location }}
+        </li>
+        <li>
+          Дата: {{ post.date }}
+        </li>
+        <li>
+          Категория: <a href="{% url 'blog:category' category_slug=post.category %}"> {{ post.category }}<a>
+        </li>
+      </ul>
+      <p> 
+        {{ post.text|truncatewords:10 }}
+      </p>
+      <a href="{% url 'blog:detail' id=post.id %}">Читать полный текст</a>
+    </article>
   {% endfor %}
 {% endblock %}        
 
