--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -11,7 +11,7 @@
       Дата: {{ post.date }}
     </li>
     <li>
-      Категория: <a href="{% url 'blog:category' category_slug=post.category %}"> {{ post.category }}<a>
+      Категория: <a href="{% url 'blog:category_posts' category_slug=post.category %}"> {{ post.category }}<a>
     </li>
   </ul>         
   <p>
