--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -14,13 +14,13 @@
           Дата: {{ post.date }}
         </li>
         <li>
-          Категория: <a href="{% url 'blog:category' category_slug=post.category %}"> {{ post.category }}<a>
+          Категория: <a href="{% url 'blog:category_posts' category_slug=post.category %}"> {{ post.category }}<a>
         </li>
       </ul>
       <p> 
         {{ post.text|truncatewords:10 }}
       </p>
-      <a href="{% url 'blog:detail' id=post.id %}">Читать полный текст</a>
+      <a href="{% url 'blog:post_detail' id=post.id %}">Читать полный текст</a>
     </article>
   {% endfor %}
 {% endblock %}        
