--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% load static%}
 {% block content %}
   <h1>Лента записей</h1>                        
-  {% for post in posts reversed %}
+  {% for post in posts %}
   <hr>
     <article>
       <ul>     
@@ -20,7 +20,7 @@
       <p> 
         {{ post.text|truncatewords:10 }}
       </p>
-      <a href="{% url 'blog:post_detail' id=post.id %}">Читать полный текст</a>
+      <a href="{% url 'blog:post_detail' post_id=post.id %}">Читать полный текст</a>
     </article>
   {% endfor %}
 {% endblock %}        
